--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
 
 		<nav>
 			<button id="hamburger"><i class="fas fa-bars"></i></button>
-			<ul>
-				<li class="dropdown-item">
+			<ul id="menuUl">
+				<!-- <li class="dropdown-item">
 					<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Translations</a>
 				    <div class="dropdown-menu">
 						<a class="dropdown-item" href="/immigration-applications.html">Immigration Applications</a>
 						<a class="dropdown-item" href="/immigration-professionals.html">Immigration Professionals</a>
-						<!-- <a class="dropdown-item" href="/other-kinds-of-translations.html">Other Kinds of Translations</a> -->
+						 <a class="dropdown-item" href="/other-kinds-of-translations.html">Other Kinds of Translations</a>
 				    </div>
 				</li>
 				<li class="dropdown-item">
@@ -90,8 +90,10 @@
 						<a class="dropdown-item" href="/financial-translations.html">Financial Translations</a>
 						<a class="dropdown-item" href="/international-students.html">International Students</a>
 					</div>
-				</li>
-				<li><a href="/about-us.html">About Us</a></li>
+				</li> -->
+				<li><a href="/who-we-are.html">Who We Are</a></li>
+				<li><a href="/why-us.html">Why Us</a></li>
+				<li><a href="/Services.html">Services</a></li>
 				<li><a href="/contact-us.html">Contact Us</a></li>
 				<li><a href="/quote-en.html"><button class="btn btnSmall">Get a Quote</button></a></li>
 			</ul>
@@ -116,22 +118,23 @@
 		<div class="container">
 			<h3>Are you?</h3>
 			<div id="threeProf">
-				<a href="/immigration-applications.html">
-					<div class="boxButton">
-						<img src="assets/svg/paper1.svg">
-						<h5>Immigration<br> Applicants</h5>
-						<p>Are we human because of unique traits and attributes not shared</p>
-						<button class="btn btnDark">Learn More</button>
-					</div>
-				</a>
 				<a href="/immigration-professionals.html">
 					<div class="boxButton">
 						<img src="assets/svg/briefcase.svg">
 						<h5>Immigration<br> Professionals</h5>
-						<p>It is a definition by negation: that which separates us</p>
+						<p>Explore how to work with us or to refer us to your clients</p>
 						<button class="btn btnDark">Learn More</button>
 					</div>
 				</a>
+				<a href="/immigration-applications.html">
+					<div class="boxButton">
+						<img src="assets/svg/paper1.svg">
+						<h5>Immigration<br> Applicants</h5>
+						<p>Explore how to get the right translation for a successful application</p>
+						<button class="btn btnDark">Learn More</button>
+					</div>
+				</a>
+				
 				<!-- <a href="/other-kinds-of-translations.html">
 					<div class="boxButton">
 						<img src="assets/svg/paper.svg">
@@ -141,13 +144,15 @@
 					</div>
 				</a> -->
 			</div>
-			<p>Some description about the process or how they select what they need.</p>
+			<div>
+				<p>Some description about the process or how they select what they need.</p>
 
-<p>Immigration Professionals - Are we human because of unique traits and attributes not shared with either animal or machine? The definition of “human” is circular: we are human by virtue of the properties that make us human (i.e., distinct from animal and machine). </p>
+				<p>Immigration Professionals - Are we human because of unique traits and attributes not shared with either animal or machine? The definition of “human” is circular: we are human by virtue of the properties that make us human (i.e., distinct from animal and machine). </p>
 
-<p>Immigration Applicants - It is a definition by negation: that which separates us from animal and machine is our “human-ness”.</p>
+				<p>Immigration Applicants - It is a definition by negation: that which separates us from animal and machine is our “human-ness”.</p>
 
-<p>Other Kinds of Translations - We are human because we are not animal, nor machine. But such thinking has been rendered progressively less tenable by the advent of evolutionary and neo-evolutionary theories which postulate a continuum in nature between animals and Man.</p>	
+				<p>Other Kinds of Translations - We are human because we are not animal, nor machine. But such thinking has been rendered progressively less tenable by the advent of evolutionary and neo-evolutionary theories which postulate a continuum in nature between animals and Man.</p>	
+			</div>
 		</div>
 	</section>
 
@@ -156,14 +161,13 @@
 			<h3>Testimonial</h3>
 			<h6>Accent Translations is a <span class="number">5</span>-Star-Company on Google</h6>
 			<div class="testimonial">
-				<p><span class="text">"I would say that your service is great.  You reply promptly to requests for quotes, translations and related requests.  Very fast turnaround time getting the translations done and fast delivery of the final translation to our office.  We are very happy with Accent Translations.  We would definitely recommend your services."</span></p>
-				<span class="name"><i>Andrea Petersen – REKAI LLP</i></span>
 			</div>
 			<div class="testimonialArrows">
-				<button><img src="assets/svg/left-arrow.svg"></button>
-				<span class="number">1/4</span>
-				<button><img src="assets/svg/right-arrow.svg"></button>
+				<button class="left-arrow" data-direction="left"><img src="assets/svg/left-arrow.svg"></button>
+				<span class="number" id="testimonialNum"></span>
+				<button class="right-arrow" data-direction="right"><img src="assets/svg/right-arrow.svg"></button>
 			</div>
+			
 		</div>
 	</section>
 
@@ -174,19 +178,19 @@
 				<div class="counterHome">
 					<img src="assets/svg/papers-white.svg">
 					<h6>Documents translated for</h6>
-					<div class="number">9728</div>
+					<div class="number counterNum" data-to="9790"></div>
 				</div>
 
 				<div class="counterHome">
 					<img src="assets/svg/clock.svg">
 					<h6>Average delivery time (Days)</h6>
-					<div class="number">2,4</div>
+					<div class="number counterNum" data-to="24"></div>
 				</div>
 
 				<div class="counterHome">
 					<img src="assets/svg/paper-search.svg">
 					<h6>Refused or questioned by the immigration purposes Immigration Authorities</h6>
-					<div class="number">0</div>
+					<div class="number counterNum" data-to="0"></div>
 				</div>
 			</div>
 			<p></p>	
