homepage, contactus page, immigration applicants pages are pretty much placed.

--- a/imm-applicants.html
+++ b/imm-applicants.html
@@ -102,102 +102,33 @@
 		
 	</header>
 
-	<section id="enterence">
+	<section id="languageSelector">
 		<div class="container">
-			<div class="text">
-				<h2>The Specialist in Translations for Immigration</h2>
-				<h6>The Canadian translation agency trusted by the best Immigration Professionals. </h5>
-				<a href="#profs"><button class="btn btnDark">Get a Translation</button></a>
-			</div>
-			<div class="image">
-				<img src="assets/svg/header-img.svg">
-			</div>
-		</div>
-	</section>
-
-	<section id="profs">
-		<div class="container">
-			<h3>Are you?</h3>
-			<div id="threeProf">
-				<a href="/imm-professionals.html">
-					<div class="boxButton">
-						<img src="assets/svg/professional.svg">
-						<h5>Immigration<br> Professionals</h5>
-						<p>Explore how to work with us or to refer us to your clients</p>
-						<button class="btn btnDark">Learn More</button>
-					</div>
-				</a>
-				<a href="/imm-applicants.html">
-					<div class="boxButton">
-						<img src="assets/svg/applicant.svg">
-						<h5>Immigration<br> Applicants</h5>
-						<p>Explore how to get the right translation for a successful application</p>
-						<button class="btn btnDark">Learn More</button>
-					</div>
-				</a>
-				
-				<!-- <a href="/other-kinds-of-translations.html">
-					<div class="boxButton">
-						<img src="assets/svg/paper.svg">
-						<h5>Other Kinds Of Translations</h5>
-						<p>We are human because we are not animal, nor machine.</p>
-						<button class="btn btnDark">Learn More</button>
-					</div>
-				</a> -->
-			</div>
-			<div>
-				<p>Some description about the process or how they select what they need.</p>
-
-				<p>Immigration Professionals - Are we human because of unique traits and attributes not shared with either animal or machine? The definition of “human” is circular: we are human by virtue of the properties that make us human (i.e., distinct from animal and machine). </p>
-
-				<p>Immigration Applicants - It is a definition by negation: that which separates us from animal and machine is our “human-ness”.</p>
-
-				<p>Other Kinds of Translations - We are human because we are not animal, nor machine. But such thinking has been rendered progressively less tenable by the advent of evolutionary and neo-evolutionary theories which postulate a continuum in nature between animals and Man.</p>	
-			</div>
-		</div>
-	</section>
-
-	<section id="testimonials">
-		<div class="container">
-			<h3>Testimonial</h3>
-			<h6>Accent Translations is a <span class="number">5</span>-Star-Company on Google</h6>
-			<div class="testimonial">
-			</div>
-			<div class="testimonialArrows">
-				<button class="left-arrow" data-direction="left"><img src="assets/svg/left-arrow.svg"></button>
-				<span class="number" id="testimonialNum"></span>
-				<button class="right-arrow" data-direction="right"><img src="assets/svg/right-arrow.svg"></button>
-			</div>
+			<div id="languages">
+				<h5>Select your language</h5>
+				<ul>
+					<li><button class="btnSmall active btn"><span class="language_flag"><img src=""></span>English</li>
+					<li><button class="btnSmall btn"><span class="language_flag"><img src=""></span>Spanish</button></li>
+					<li><button class="btnSmall btn"><span class="language_flag"><img src=""></span>Portuguese</button></li>
+					<li><button class="btnSmall btn"><span class="language_flag"><img src=""></span>Italian</button></li>
+					<li><button class="btnSmall btn"><span class="language_flag"><img src=""></span>Russian</button></li>
+					<li><button class="btnSmall btn"><span class="language_flag"><img src=""></span>Ukrainian</button></li>
+					<li><button class="btnSmall btn"><span class="language_flag"><img src=""></span>Chinese</button></li>
+					<li><button class="btnSmall btn"><span class="language_flag"><img src=""></span>Arabic</button></li>
+				</ul>
 			
 		</div>
 	</section>
 
-	<section id="counters">
-		<div class="container">
-			<h3>Our numbers for <span class="number">2018<span></h3>
-			<div id="threeCounter">
-				<div class="counterHome">
-					<img src="assets/svg/papers-white.svg">
-					<h6>Documents translated for</h6>
-					<div class="number counterNum" data-to="9790"></div>
-				</div>
-
-				<div class="counterHome">
-					<img src="assets/svg/clock.svg">
-					<h6>Average delivery time (Days)</h6>
-					<div class="number counterNum" data-to="24"></div>
-				</div>
-
-				<div class="counterHome">
-					<img src="assets/svg/paper-search.svg">
-					<h6>Refused or questioned by the immigration purposes Immigration Authorities</h6>
-					<div class="number counterNum" data-to="0"></div>
-				</div>
-			</div>
-			<p></p>	
-		</div>
+	<section id="why-us"> 
+		
 	</section>
 
+	<section id="video"> 
+		<div class="container">
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/pOmu0LtcI6Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		</div>
+	</section>
 
 	<footer class="section">
 		<nav>
