--- a/contact-us.html
+++ b/contact-us.html
@@ -95,107 +95,33 @@
 				<li><a href="/why-us.html">Why Us</a></li>
 				<li><a href="/services.html">Services</a></li>
 				<li><a href="/our-warranty.html">Our Warranty</a></li>
-				<li><a href="/contact-us.html">Contact Us</a></li>
+				<li><a href="/contact-us.html" class="active">Contact Us</a></li>
 				<li><a href="mailto:office3@accenttranslation.net?Subject=Please%20can%20I%20get%20a%20quote" target="_top"><button class="btn btnSmall">Get a Quote</button></a></li>
 			</ul>
 		</nav>
 		
 	</header>
 
-	<section id="enterence">
+	<section id="contact">
 		<div class="container">
-			<div class="text">
-				<h2>The Specialist in Translations for Immigration</h2>
-				<h6>The Canadian translation agency trusted by the best Immigration Professionals. </h5>
-				<a href="#profs"><button class="btn btnDark">Get a Translation</button></a>
+			<div id="map">
 			</div>
-			<div class="image">
-				<img src="assets/svg/header-img.svg">
+			<div id="details">
+				<h5><span class="number">3500</span> Dufferin St. - Suite <span class="number">503</span>, Toronto, ON  Canada M<span class="number">3</span>K <span class="number">1</span>N<span class="number">2</span></h5>
+				<h5>Business Hours (EST time)</h5>
+				<ul>
+					<li>Monday - Friday (except Wednesday): <span class="number">9:00</span>am - <span class="number">5:00</span>pm</li>
+					<li>Wednesday <span class="number">8:00</span>am - <span class="number">5:00</span>pm</li>
+					<li>Saturday - Sunday: Closed</li>
+				</ul>
+				<h5>Phone Number:</h5><p><span class="number"> +1 (416) 637-7791</span></p>
+				<h5>Directions</h5>
+				<p>By car: closest intersection Dufferin & Wilson (Free parking behind the building)</p>
+				<p>By TTC: closest subway stations: Wilson - Yorkdale</p>
 			</div>
-		</div>
-	</section>
 
-	<section id="profs">
-		<div class="container">
-			<h3>Are you?</h3>
-			<div id="threeProf">
-				<a href="/imm-professionals.html">
-					<div class="boxButton">
-						<img src="assets/svg/professional.svg">
-						<h5>Immigration<br> Professionals</h5>
-						<p>Explore how to work with us or to refer us to your clients</p>
-						<button class="btn btnDark">Learn More</button>
-					</div>
-				</a>
-				<a href="/imm-applicants.html">
-					<div class="boxButton">
-						<img src="assets/svg/applicant.svg">
-						<h5>Immigration<br> Applicants</h5>
-						<p>Explore how to get the right translation for a successful application</p>
-						<button class="btn btnDark">Learn More</button>
-					</div>
-				</a>
-				
-				<!-- <a href="/other-kinds-of-translations.html">
-					<div class="boxButton">
-						<img src="assets/svg/paper.svg">
-						<h5>Other Kinds Of Translations</h5>
-						<p>We are human because we are not animal, nor machine.</p>
-						<button class="btn btnDark">Learn More</button>
-					</div>
-				</a> -->
-			</div>
-			<div>
-				<p>Some description about the process or how they select what they need.</p>
 
-				<p>Immigration Professionals - Are we human because of unique traits and attributes not shared with either animal or machine? The definition of “human” is circular: we are human by virtue of the properties that make us human (i.e., distinct from animal and machine). </p>
 
-				<p>Immigration Applicants - It is a definition by negation: that which separates us from animal and machine is our “human-ness”.</p>
-
-				<p>Other Kinds of Translations - We are human because we are not animal, nor machine. But such thinking has been rendered progressively less tenable by the advent of evolutionary and neo-evolutionary theories which postulate a continuum in nature between animals and Man.</p>	
-			</div>
-		</div>
-	</section>
-
-	<section id="testimonials">
-		<div class="container">
-			<h3>Testimonial</h3>
-			<h6>Accent Translations is a <span class="number">5</span>-Star-Company on Google</h6>
-			<div class="testimonial">
-			</div>
-			<div class="testimonialArrows">
-				<button class="left-arrow" data-direction="left"><img src="assets/svg/left-arrow.svg"></button>
-				<span class="number" id="testimonialNum"></span>
-				<button class="right-arrow" data-direction="right"><img src="assets/svg/right-arrow.svg"></button>
-			</div>
-			
-		</div>
-	</section>
-
-	<section id="counters">
-		<div class="container">
-			<h3>Our numbers for <span class="number">2018<span></h3>
-			<div id="threeCounter">
-				<div class="counterHome">
-					<img src="assets/svg/papers-white.svg">
-					<h6>Documents translated for</h6>
-					<div class="number counterNum" data-to="9790"></div>
-				</div>
-
-				<div class="counterHome">
-					<img src="assets/svg/clock.svg">
-					<h6>Average delivery time (Days)</h6>
-					<div class="number counterNum" data-to="24"></div>
-				</div>
-
-				<div class="counterHome">
-					<img src="assets/svg/paper-search.svg">
-					<h6>Refused or questioned by the immigration purposes Immigration Authorities</h6>
-					<div class="number counterNum" data-to="0"></div>
-				</div>
-			</div>
-			<p></p>	
-		</div>
 	</section>
 
 
@@ -250,6 +176,26 @@
 			<div id="copyright"><small>© 2014 Accent Translations Inc.</small></div>
 		</div>
 	</footer>
+<script>
+	function initMap() {
+  // The location of Uluru
+  var uluru = {lat: 43.7294583, lng: -79.4609662};
+  // The map, centered at Uluru
+  var map = new google.maps.Map(
+      document.getElementById('map'), {zoom: 16, center: uluru});
+  // The marker, positioned at Uluru
+  var marker = new google.maps.Marker({position: uluru, map: map});
+}
+
+    </script>
+    <!--Load the API from the specified URL
+    * The async attribute allows the browser to render the page while the API loads
+    * The key parameter will contain your own API key (which is not needed for this tutorial)
+    * The callback parameter executes the initMap() function
+    -->
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBF-ckwPazVA541SEspNzkgtxGIZ-aAfHY&callback=initMap">
+    </script>
 
 
 	<script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
