--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 				<div class="counterHome">
 					<img src="assets/svg/clock.svg">
 					<h6>Average delivery time (Days)</h6>
-					<div class="number counterNum" data-to="24"></div>
+					<div class="number counterNum" data-type="comma" data-to="24"></div>
 				</div>
 
 				<div class="counterHome">
