--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 			<div id="threeCounter">
 				<div class="counterHome">
 					<img src="assets/svg/papers-white.svg">
-					<h6>Documents translated for</h6>
+					<h6>Documents translated</h6>
 					<div class="number counterNum" data-to="9790"></div>
 				</div>
 
